--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.14.0",
+    "@react-navigation/drawer": "^6.1.4",
+    "@react-navigation/native": "^6.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "^3.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-svg": "12.1.1",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "victory-native": "^35.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
