--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "native-base": "^3.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
