--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "victory-native": "^35.3.3"
+    "victory-native": "^35.3.3",
+    "expo-sqlite": "~9.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
